--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <body>
 
-<h1>ashish jhatu</h1>
-<p>bunty laudu.</p>
-
+<h1 style="color:blue;">Vishal Public School</h1>
+<p style="color:red;">Vapi.</p>
 </body>
 </html>
